QtCore/gen_qcborvalue.h

class QCborArray;
class QCborMap;
class QCborParserError;
class QCborValue;
class QDateTime;
class QRegularExpression;
class QUrl;
class QUuid;
typedef struct QCborArray QCborArray;
typedef struct QCborMap QCborMap;
typedef struct QCborParserError QCborParserError;
typedef struct QCborStreamWriter QCborStreamWriter;
typedef struct QCborValue QCborValue;
typedef struct QCborValueRef QCborValueRef;
typedef struct QDateTime QDateTime;
typedef struct QJsonValue QJsonValue;
typedef struct QRegularExpression QRegularExpression;
typedef struct QUrl QUrl;
typedef struct QUuid QUuid;
typedef struct QVariant QVariant;
bool QCborValueRef_isContainer(const QCborValueRef* self);
bool QCborValueRef_isSimpleType(const QCborValueRef* self);
bool QCborValueRef_isSimpleTypeWithSt(const QCborValueRef* self, uint8_t st);
uint64_t QCborValueRef_tag(const QCborValueRef* self);
QCborValue* QCborValueRef_taggedValue(const QCborValueRef* self);
long long QCborValueRef_toInteger(const QCborValueRef* self);
bool QCborValueRef_toBool(const QCborValueRef* self);
double QCborValueRef_toDouble(const QCborValueRef* self);
struct miqt_string QCborValueRef_toByteArray(const QCborValueRef* self);
struct miqt_string QCborValueRef_toString(const QCborValueRef* self);
QDateTime* QCborValueRef_toDateTime(const QCborValueRef* self);
QUrl* QCborValueRef_toUrl(const QCborValueRef* self);
QRegularExpression* QCborValueRef_toRegularExpression(const QCborValueRef* self);
QUuid* QCborValueRef_toUuid(const QCborValueRef* self);
QCborArray* QCborValueRef_toArray(const QCborValueRef* self);
QCborArray* QCborValueRef_toArrayWithQCborArray(const QCborValueRef* self, QCborArray* a);
QCborMap* QCborValueRef_toMap(const QCborValueRef* self);
QCborMap* QCborValueRef_toMapWithQCborMap(const QCborValueRef* self, QCborMap* m);
QCborValue* QCborValueRef_operatorSubscript(const QCborValueRef* self, struct miqt_string key);
QCborValue* QCborValueRef_operatorSubscript2(const QCborValueRef* self, long long key);
QCborValueRef* QCborValueRef_operatorSubscript3(QCborValueRef* self, long long key);
QCborValueRef* QCborValueRef_operatorSubscript5(QCborValueRef* self, struct miqt_string key);
int QCborValueRef_compare(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_operatorEqual(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_operatorNotEqual(const QCborValueRef* self, QCborValue* other);
bool QCborValueRef_operatorLesser(const QCborValueRef* self, QCborValue* other);
QVariant* QCborValueRef_toVariant(const QCborValueRef* self);
QJsonValue* QCborValueRef_toJsonValue(const QCborValueRef* self);
struct miqt_string QCborValueRef_toCbor(QCborValueRef* self);
void QCborValueRef_toCborWithWriter(QCborValueRef* self, QCborStreamWriter* writer);
struct miqt_string QCborValueRef_toDiagnosticNotation(QCborValueRef* self);
uint64_t QCborValueRef_tag1(const QCborValueRef* self, uint64_t defaultValue);
QCborValue* QCborValueRef_taggedValue1(const QCborValueRef* self, QCborValue* defaultValue);
long long QCborValueRef_toInteger1(const QCborValueRef* self, long long defaultValue);
bool QCborValueRef_toBool1(const QCborValueRef* self, bool defaultValue);
double QCborValueRef_toDouble1(const QCborValueRef* self, double defaultValue);
struct miqt_string QCborValueRef_toByteArray1(const QCborValueRef* self, struct miqt_string defaultValue);
struct miqt_string QCborValueRef_toString1(const QCborValueRef* self, struct miqt_string defaultValue);
QDateTime* QCborValueRef_toDateTime1(const QCborValueRef* self, QDateTime* defaultValue);
QUrl* QCborValueRef_toUrl1(const QCborValueRef* self, QUrl* defaultValue);
QRegularExpression* QCborValueRef_toRegularExpression1(const QCborValueRef* self, QRegularExpression* defaultValue);
QUuid* QCborValueRef_toUuid1(const QCborValueRef* self, QUuid* defaultValue);
struct miqt_string QCborValueRef_toCbor1(QCborValueRef* self, int opt);
void QCborValueRef_toCbor2(QCborValueRef* self, QCborStreamWriter* writer, int opt);
struct miqt_string QCborValueRef_toDiagnosticNotation1(QCborValueRef* self, int opt);
void QCborValueRef_delete(QCborValueRef* self);