qt/cbor/gen_qcborvalue.nim

proc fcQCborValueRef_isContainer(self: pointer, ): bool {.importc: "QCborValueRef_isContainer".}
proc fcQCborValueRef_isSimpleType(self: pointer, ): bool {.importc: "QCborValueRef_isSimpleType".}
proc fcQCborValueRef_isSimpleTypeWithSt(self: pointer, st: cint): bool {.importc: "QCborValueRef_isSimpleTypeWithSt".}
proc fcQCborValueRef_tag(self: pointer, ): cint {.importc: "QCborValueRef_tag".}
proc fcQCborValueRef_taggedValue(self: pointer, ): pointer {.importc: "QCborValueRef_taggedValue".}
proc fcQCborValueRef_toInteger(self: pointer, ): clonglong {.importc: "QCborValueRef_toInteger".}
proc fcQCborValueRef_toBool(self: pointer, ): bool {.importc: "QCborValueRef_toBool".}
proc fcQCborValueRef_toDouble(self: pointer, ): float64 {.importc: "QCborValueRef_toDouble".}
proc fcQCborValueRef_toByteArray(self: pointer, ): struct_miqt_string {.importc: "QCborValueRef_toByteArray".}
proc fcQCborValueRef_toString(self: pointer, ): struct_miqt_string {.importc: "QCborValueRef_toString".}
proc fcQCborValueRef_toDateTime(self: pointer, ): pointer {.importc: "QCborValueRef_toDateTime".}
proc fcQCborValueRef_toUrl(self: pointer, ): pointer {.importc: "QCborValueRef_toUrl".}
proc fcQCborValueRef_toRegularExpression(self: pointer, ): pointer {.importc: "QCborValueRef_toRegularExpression".}
proc fcQCborValueRef_toUuid(self: pointer, ): pointer {.importc: "QCborValueRef_toUuid".}
proc fcQCborValueRef_toArray(self: pointer, ): pointer {.importc: "QCborValueRef_toArray".}
proc fcQCborValueRef_toArrayWithQCborArray(self: pointer, a: pointer): pointer {.importc: "QCborValueRef_toArrayWithQCborArray".}
proc fcQCborValueRef_toMap(self: pointer, ): pointer {.importc: "QCborValueRef_toMap".}
proc fcQCborValueRef_toMapWithQCborMap(self: pointer, m: pointer): pointer {.importc: "QCborValueRef_toMapWithQCborMap".}
proc fcQCborValueRef_operatorSubscript(self: pointer, key: struct_miqt_string): pointer {.importc: "QCborValueRef_operatorSubscript".}
proc fcQCborValueRef_operatorSubscript2(self: pointer, key: clonglong): pointer {.importc: "QCborValueRef_operatorSubscript2".}
proc fcQCborValueRef_operatorSubscript3(self: pointer, key: clonglong): pointer {.importc: "QCborValueRef_operatorSubscript3".}
proc fcQCborValueRef_operatorSubscript5(self: pointer, key: struct_miqt_string): pointer {.importc: "QCborValueRef_operatorSubscript5".}
proc fcQCborValueRef_compare(self: pointer, other: pointer): cint {.importc: "QCborValueRef_compare".}
proc fcQCborValueRef_operatorEqual(self: pointer, other: pointer): bool {.importc: "QCborValueRef_operatorEqual".}
proc fcQCborValueRef_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QCborValueRef_operatorNotEqual".}
proc fcQCborValueRef_operatorLesser(self: pointer, other: pointer): bool {.importc: "QCborValueRef_operatorLesser".}
proc fcQCborValueRef_toVariant(self: pointer, ): pointer {.importc: "QCborValueRef_toVariant".}
proc fcQCborValueRef_toJsonValue(self: pointer, ): pointer {.importc: "QCborValueRef_toJsonValue".}
proc fcQCborValueRef_toCbor(self: pointer, ): struct_miqt_string {.importc: "QCborValueRef_toCbor".}
proc fcQCborValueRef_toCborWithWriter(self: pointer, writer: pointer): void {.importc: "QCborValueRef_toCborWithWriter".}
proc fcQCborValueRef_toDiagnosticNotation(self: pointer, ): struct_miqt_string {.importc: "QCborValueRef_toDiagnosticNotation".}
proc fcQCborValueRef_tag1(self: pointer, defaultValue: cint): cint {.importc: "QCborValueRef_tag1".}
proc fcQCborValueRef_taggedValue1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_taggedValue1".}
proc fcQCborValueRef_toInteger1(self: pointer, defaultValue: clonglong): clonglong {.importc: "QCborValueRef_toInteger1".}
proc fcQCborValueRef_toBool1(self: pointer, defaultValue: bool): bool {.importc: "QCborValueRef_toBool1".}
proc fcQCborValueRef_toDouble1(self: pointer, defaultValue: float64): float64 {.importc: "QCborValueRef_toDouble1".}
proc fcQCborValueRef_toByteArray1(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QCborValueRef_toByteArray1".}
proc fcQCborValueRef_toString1(self: pointer, defaultValue: struct_miqt_string): struct_miqt_string {.importc: "QCborValueRef_toString1".}
proc fcQCborValueRef_toDateTime1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toDateTime1".}
proc fcQCborValueRef_toUrl1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toUrl1".}
proc fcQCborValueRef_toRegularExpression1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toRegularExpression1".}
proc fcQCborValueRef_toUuid1(self: pointer, defaultValue: pointer): pointer {.importc: "QCborValueRef_toUuid1".}
proc fcQCborValueRef_toCbor1(self: pointer, opt: cint): struct_miqt_string {.importc: "QCborValueRef_toCbor1".}
proc fcQCborValueRef_toCbor2(self: pointer, writer: pointer, opt: cint): void {.importc: "QCborValueRef_toCbor2".}
proc fcQCborValueRef_toDiagnosticNotation1(self: pointer, opt: cint): struct_miqt_string {.importc: "QCborValueRef_toDiagnosticNotation1".}
proc fcQCborValueRef_delete(self: pointer) {.importc: "QCborValueRef_delete".}


func init*(T: type QCborParserError, h: ptr cQCborParserError): QCborParserError =
  T(h: h)
proc errorString*(self: QCborParserError, ): string =

  let v_ms = fcQCborParserError_errorString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc delete*(self: QCborParserError) =
  fcQCborParserError_delete(self.h)

func init*(T: type QCborValue, h: ptr cQCborValue): QCborValue =
  T(h: h)
proc create*(T: type QCborValue, ): QCborValue =

  QCborValue.init(fcQCborValue_new())
proc create*(T: type QCborValue, t_x: QCborValueType): QCborValue =

  QCborValue.init(fcQCborValue_new2(cint(t_x)))
proc create*(T: type QCborValue, b_x: bool): QCborValue =

  QCborValue.init(fcQCborValue_new3(b_x))
proc create2*(T: type QCborValue, i: cint): QCborValue =

  QCborValue.init(fcQCborValue_new4(i))
proc create*(T: type QCborValue, u: cuint): QCborValue =

  QCborValue.init(fcQCborValue_new5(u))
proc create*(T: type QCborValue, i: clonglong): QCborValue =

  QCborValue.init(fcQCborValue_new6(i))
proc create*(T: type QCborValue, v: float64): QCborValue =

  QCborValue.init(fcQCborValue_new7(v))
proc create2*(T: type QCborValue, st: gen_qcborcommon.QCborSimpleType): QCborValue =

  QCborValue.init(fcQCborValue_new8(cint(st)))
proc create*(T: type QCborValue, ba: seq[byte]): QCborValue =

  QCborValue.init(fcQCborValue_new9(struct_miqt_string(data: cast[cstring](if len(ba) == 0: nil else: unsafeAddr ba[0]), len: csize_t(len(ba)))))
proc create2*(T: type QCborValue, s: string): QCborValue =

  QCborValue.init(fcQCborValue_new10(struct_miqt_string(data: s, len: csize_t(len(s)))))
proc create*(T: type QCborValue, s: cstring): QCborValue =

  QCborValue.init(fcQCborValue_new11(s))
proc create*(T: type QCborValue, a: gen_qcborarray.QCborArray): QCborValue =

  QCborValue.init(fcQCborValue_new12(a.h))
proc create2*(T: type QCborValue, m: gen_qcbormap.QCborMap): QCborValue =

  QCborValue.init(fcQCborValue_new13(m.h))
proc create2*(T: type QCborValue, tag: gen_qcborcommon.QCborTag): QCborValue =

  QCborValue.init(fcQCborValue_new14(cint(tag)))
proc create2*(T: type QCborValue, t_x: gen_qcborcommon.QCborKnownTags): QCborValue =

  QCborValue.init(fcQCborValue_new15(cint(t_x)))
proc create2*(T: type QCborValue, dt: gen_qdatetime.QDateTime): QCborValue =

  QCborValue.init(fcQCborValue_new16(dt.h))
proc create2*(T: type QCborValue, url: gen_qurl.QUrl): QCborValue =

  QCborValue.init(fcQCborValue_new17(url.h))
proc create2*(T: type QCborValue, rx: gen_qregularexpression.QRegularExpression): QCborValue =

  QCborValue.init(fcQCborValue_new18(rx.h))
proc create2*(T: type QCborValue, uuid: gen_quuid.QUuid): QCborValue =

  QCborValue.init(fcQCborValue_new19(uuid.h))
proc create2*(T: type QCborValue, other: QCborValue): QCborValue =

  QCborValue.init(fcQCborValue_new20(other.h))
proc create*(T: type QCborValue, tag: gen_qcborcommon.QCborTag, taggedValue: QCborValue): QCborValue =

  QCborValue.init(fcQCborValue_new21(cint(tag), taggedValue.h))
proc create2*(T: type QCborValue, t_x: gen_qcborcommon.QCborKnownTags, tv: QCborValue): QCborValue =

  QCborValue.init(fcQCborValue_new22(cint(t_x), tv.h))
proc operatorAssign*(self: QCborValue, other: QCborValue): void =

  fcQCborValue_operatorAssign(self.h, other.h)

proc swap*(self: QCborValue, other: QCborValue): void =

  fcQCborValue_swap(self.h, other.h)

proc typeX*(self: QCborValue, ): QCborValueType =

  QCborValueType(fcQCborValue_typeX(self.h))

proc isInteger*(self: QCborValue, ): bool =

  fcQCborValue_isInteger(self.h)

proc isByteArray*(self: QCborValue, ): bool =

  fcQCborValue_isByteArray(self.h)

proc isString*(self: QCborValue, ): bool =

  fcQCborValue_isString(self.h)

proc isArray*(self: QCborValue, ): bool =

  fcQCborValue_isArray(self.h)

proc isMap*(self: QCborValue, ): bool =

  fcQCborValue_isMap(self.h)

proc isTag*(self: QCborValue, ): bool =

  fcQCborValue_isTag(self.h)

proc isFalse*(self: QCborValue, ): bool =

  fcQCborValue_isFalse(self.h)

proc isTrue*(self: QCborValue, ): bool =

  fcQCborValue_isTrue(self.h)

proc isBool*(self: QCborValue, ): bool =

  fcQCborValue_isBool(self.h)

proc isNull*(self: QCborValue, ): bool =

  fcQCborValue_isNull(self.h)

proc isUndefined*(self: QCborValue, ): bool =

  fcQCborValue_isUndefined(self.h)

proc isDouble*(self: QCborValue, ): bool =

  fcQCborValue_isDouble(self.h)

proc isDateTime*(self: QCborValue, ): bool =

  fcQCborValue_isDateTime(self.h)

proc isUrl*(self: QCborValue, ): bool =

  fcQCborValue_isUrl(self.h)

proc isRegularExpression*(self: QCborValue, ): bool =

  fcQCborValue_isRegularExpression(self.h)

proc isUuid*(self: QCborValue, ): bool =

  fcQCborValue_isUuid(self.h)

proc isInvalid*(self: QCborValue, ): bool =

  fcQCborValue_isInvalid(self.h)

proc isContainer*(self: QCborValue, ): bool =

  fcQCborValue_isContainer(self.h)

proc isSimpleType*(self: QCborValue, ): bool =

  fcQCborValue_isSimpleType(self.h)

proc isSimpleTypeWithSt*(self: QCborValue, st: gen_qcborcommon.QCborSimpleType): bool =

  fcQCborValue_isSimpleTypeWithSt(self.h, cint(st))

proc toSimpleType*(self: QCborValue, ): gen_qcborcommon.QCborSimpleType =

  gen_qcborcommon.QCborSimpleType(fcQCborValue_toSimpleType(self.h))

proc toInteger*(self: QCborValue, ): clonglong =

  fcQCborValue_toInteger(self.h)

proc toBool*(self: QCborValue, ): bool =

  fcQCborValue_toBool(self.h)

proc toDouble*(self: QCborValue, ): float64 =

  fcQCborValue_toDouble(self.h)

proc tag*(self: QCborValue, ): gen_qcborcommon.QCborTag =

  gen_qcborcommon.QCborTag(fcQCborValue_tag(self.h))

proc taggedValue*(self: QCborValue, ): QCborValue =

  QCborValue(h: fcQCborValue_taggedValue(self.h))

proc toByteArray*(self: QCborValue, ): seq[byte] =

  var v_bytearray = fcQCborValue_toByteArray(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc toString*(self: QCborValue, ): string =

  let v_ms = fcQCborValue_toString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toDateTime*(self: QCborValue, ): gen_qdatetime.QDateTime =

  gen_qdatetime.QDateTime(h: fcQCborValue_toDateTime(self.h))

proc toUrl*(self: QCborValue, ): gen_qurl.QUrl =

  gen_qurl.QUrl(h: fcQCborValue_toUrl(self.h))

proc toRegularExpression*(self: QCborValue, ): gen_qregularexpression.QRegularExpression =

  gen_qregularexpression.QRegularExpression(h: fcQCborValue_toRegularExpression(self.h))

proc toUuid*(self: QCborValue, ): gen_quuid.QUuid =

  gen_quuid.QUuid(h: fcQCborValue_toUuid(self.h))

proc toArray*(self: QCborValue, ): gen_qcborarray.QCborArray =

  gen_qcborarray.QCborArray(h: fcQCborValue_toArray(self.h))
